--- a/Git.yml
+++ b/Git.yml
@@ -6,5 +6,9 @@
       yum:
         - name: git
           state: present 
-     
+     - name: install maven
+       yum:
+          - name: hhtpd
+            state: present
+            
        
