--- a/Git.yml
+++ b/Git.yml
@@ -1,17 +1,17 @@
 ---
 - hosts: 192.10.1.205
+  name: installing git and maven
   become: yes
   tasks:
     - name: install git 
       yum:
-        - name: git
-          state: absent 
-     - name: install apache
-       yum:
-          - name: hhtpd
-            state: present
-      - name: start apache service
-          service:
-            - name: httpd
-              service: started
-       
+       - name: git
+         state: absent 
+    - name: install apache
+      yum:
+        - name: hhtpd
+          state: present
+    - name: start apache service
+        service:
+        - name: httpd
+          service: started
