--- a/main.yml
+++ b/main.yml
@@ -3,7 +3,7 @@
   name: installing git and maven
   become: yes
   tasks:
-    - name: install git 
+    - name: Install git 
       yum:
        - name: git
          state: present 
@@ -11,7 +11,7 @@
       yum:
         - name: hhtpd
           state: present
-    - name: start apache service
+    - name: Start apache service
       service:
         - name: httpd
           service: started
